🔒 Secure API keys and implement environment variables
Security Improvements:
- Remove hardcoded Supabase keys from all Python scripts
- Implement environment variable loading with python-dotenv
- Add .env file with actual keys (gitignored)
- Update .env.example with secure placeholders
- Remove exposed keys from setup-summary.txt
- Add validation for required environment variables

Files Updated:
- process-pdfs-from-storage-idempotent.py: Use env vars for Supabase config
- regenerate-embeddings.py: Use env vars for Supabase config
- setup-summary.txt: Replace actual keys with placeholders
- .env.example: Add PDF processing configuration
- .gitignore: Ensure .env files are never committed

Security Note:
- The .env file contains actual keys and is gitignored
- All scripts now require proper environment setup
- Keys are no longer exposed in source control

⚠️ IMPORTANT: You should rotate your Supabase service role key
after this commit since the old key was exposed in git history.

--- a/legal-assistant-n8n/.env.example
+++ b/legal-assistant-n8n/.env.example
@@ -9,6 +9,12 @@ SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_ROLE_KEY=YOUR_SUPABASE_SERVICE_ROLE_KEY
 SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
 
+# For PDF Processing Scripts (process-pdfs-from-storage-idempotent.py)
+SUPABASE_KEY=YOUR_SUPABASE_SERVICE_ROLE_KEY
+STORAGE_BUCKET=legal-documents
+CHUNK_SIZE=1000
+CHUNK_OVERLAP=200
+
 # AI Model Configuration (Using Groq - Recommended)
 
 # Groq API (Primary AI provider - Fast and reliable)
