feat: Complete legal assistant n8n modernization and cleanup
🎯 Major Improvements:
- Repository cleanup: Removed 6 outdated files, organized structure
- Database modernization: Fixed 384-dimensional embeddings, regenerated vectors
- Security hardening: Moved credentials to environment variables
- AI prompt enhancement: Added mandatory C.R.S. formatting for Colorado statutes
- Documentation overhaul: Updated all guides with current best practices

✅ Key Changes:
- Enhanced AI prompt with explicit "C.R.S. 18-4-401 (Theft)" formatting
- Updated workflow via n8n MCP integration for live deployment
- Added comprehensive vector search validation (1000+ documents)
- Streamlined setup scripts and removed deprecated files
- Improved security with .env configuration and credential guides

🔧 Technical Updates:
- Fixed BAAI/bge-small-en-v1.5 embedding dimensions (384)
- Updated create-correct-vector-function.sql with proper similarity search
- Enhanced docker-compose.yml with environment variable support
- Modernized legal-assistant-bot-workflow.json with C.R.S. formatting
- Added ADVANCED_CUSTOMIZATION.md for advanced configuration

📚 Documentation:
- Comprehensive README updates with current architecture
- Enhanced troubleshooting guides with common solutions
- Updated setup flows with security best practices
- Improved credential management documentation

The legal assistant now properly formats Colorado statutes as "C.R.S. 18-4-401 (Theft)"
and processes 1000+ legal documents with correct 384-dimensional vector embeddings.

--- a/legal-assistant-n8n/docker-compose.yml
+++ b/legal-assistant-n8n/docker-compose.yml
@@ -72,7 +72,7 @@ services:
   #     POSTGRES_PASSWORD: ${DB_POSTGRESDB_PASSWORD}
   #   volumes:
   #     - postgres_data:/var/lib/postgresql/data
-  #     - ./database-schema.sql:/docker-entrypoint-initdb.d/schema.sql:ro
+  #     - ./create-correct-vector-function.sql:/docker-entrypoint-initdb.d/schema.sql:ro
   #   ports:
   #     - "5432:5432"
   #   networks:
