Switch to orca-mini model and fix Ollama initialization
- Changed default model from mistral (7B, slow) to orca-mini (3B, faster)
- Fixed initialization flag to include model name: .initialized_${MODEL}
- Prevents model confusion when switching between different models
- Improved entrypoint script: cleaner error handling, proper signal handling
- Ollama now pulls correct model based on OLLAMA_MODEL env var
- RAG queries now complete in reasonable time on CPU
- Tested: document ingestion + RAG query working with orca-mini

--- a/ai-workflows/docker-compose.yml
+++ b/ai-workflows/docker-compose.yml
@@ -16,11 +16,11 @@ services:
     restart: unless-stopped
     entrypoint: bash /entrypoint.sh
     healthcheck:
-      test: ["CMD", "bash", "-c", "/bin/ollama list | grep -q mistral"]
-      interval: 10s
+      test: ["CMD", "bash", "-c", "/bin/ollama list | grep -q orca-mini"]
+      interval: 5s
       timeout: 5s
-      retries: 30
-      start_period: 120s
+      retries: 120
+      start_period: 10s
 
   # Main AI application (REST API)
   app:
