--- a/ai-workflows/.env.example
+++ b/ai-workflows/.env.example
@@ -1,4 +1,7 @@
 # AI Workflows - Environment Variables
+# Edit this file to customize behavior
+# Rename it to .env to activate
+# Local changes are git-ignored for security
 
 # OFFLINE MODE (AIRPLANE MODE)
 # Set to 'true' for completely offline operation (no internet access)
@@ -12,7 +15,9 @@ OLLAMA_HOST=http://ollama:11434
 
 # Model to use for LLM inference
 # Popular offline options: mistral, neural-chat, orca-mini, llama2
-OLLAMA_MODEL=mistral
+# Model to use for LLM inference
+# Popular offline options: mistral, neural-chat, orca-mini, llama2
+OLLAMA_MODEL=tinyllama
 
 # REST API CONFIGURATION
 # Host and port for the REST API server
