Switch ChromaDB persistence to host data folder, hardcode ingestion to ai-workflows/data, update .gitignore to keep only .gitkeep, and document new setup in README. Add legal_chunker module and requirements for PDF ingestion.

--- a/ai-workflows/.gitignore
+++ b/ai-workflows/.gitignore
@@ -37,7 +37,9 @@ env/
 *~
 
 # Data and logs
-data/
+# Keep the data directory in repo but ignore its contents except .gitkeep
+data/*
+!data/.gitkeep
 logs/
 *.log
 
