--- a/ai-workflows/docker-compose.yml
+++ b/ai-workflows/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - API_PORT=8000
     volumes:
       - ./config:/app/config:ro
-      - chroma_data:/app/data
+      - ./data:/app/data
     networks:
       - ai-workflows-network
     depends_on:
@@ -71,8 +71,6 @@ services:
 
 volumes:
   ollama_models:
-    driver: local
-  chroma_data:
     driver: local
 
 networks:
