Add macOS Docker cleanup script and reduce disk growth: - Add docker-prune-macos.sh for safe cleanup on macOS (cache/images, optional volumes/containers) - Add log rotation for app and ollama in docker-compose.yml (json-file, 10MB x3) - Document cleanup script usage in ai-workflows/README.md - Ensure build context is lean via .dockerignore (already present in repo)

--- a/ai-workflows/docker-compose.yml
+++ b/ai-workflows/docker-compose.yml
@@ -21,6 +21,11 @@ services:
       timeout: 5s
       retries: 120
       start_period: 10s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # Main AI application (REST API)
   app:
@@ -50,6 +55,11 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   # Telegram bot service (completely decoupled)
   telegram-bot:
